<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.49"
        android:background="#aa82DB7C">

        <TextView
            android:id="@+id/tvQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvAnswerOne"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/how_many_perspectives_exists"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/tvAnswerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/upside_down_first_answer"
            android:textSize="@dimen/medium_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.49"
        android:background="#aaD8A379">

        <TextView
            android:id="@+id/tvQuestionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvAnswerTwo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/why_it_matters_at_all"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/tvAnswerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/upside_down_second_answer"
            android:textSize="@dimen/medium_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/put_check_mark" />
    </RelativeLayout>

</LinearLayout>