<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:elevation="4dp"
    android:id="@+id/layoutInstructions"
    android:visibility="visible"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        style="@style/DosisBold32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_instructions"
        android:layout_marginBottom="32dp"
        android:text="@string/instructions"
        android:textColor="@color/textColorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        style="@style/Dosis20"
        android:id="@+id/tvQuizInstructionsText"
        android:gravity="center"
        android:textColor="@color/textColorPrimary"
        android:text="@string/quiz_instructions_text"
        android:layout_below="@id/textView"
        />

    <Button
        android:id="@+id/startQuizBtn"
        style="@style/DosisBold14"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_shape_round_15"
        android:backgroundTint="@color/colorPrimary"
        android:paddingStart="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvQuizInstructionsText"
        android:paddingEnd="15dp"
        android:text="@string/start_quiz"
        android:textColor="@color/white"/>

</RelativeLayout>