<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_info_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_rounded_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/dosis"
            android:hint="@string/email"
            android:textSize="@dimen/medium_text_size"
            app:hintTextAppearance="@style/HintTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dosis"
            android:hint="@string/password"
            android:textSize="@dimen/medium_text_size">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_key"

                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_shape_round"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="10dp"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />


    </LinearLayout>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvSkipLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:fontFamily="@font/dosis"
            android:text="@string/countinue_without_login"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/dosis"
            android:text="@string/here"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>