<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTaskText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:text="@string/with_yellow_car"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/toolbar_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="OVO JE TEKST IZAZOVA" />


    <ImageView
        android:id="@+id/ivTaskPhoto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:alpha="0.4"
        android:background="@drawable/add_photo_frame"
        android:padding="50dp"
        android:src="@drawable/icon_photo_challenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskText" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTaskPhoto">


        <TextView
            android:id="@+id/tvTakePhoto"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/add_photo_frame"
            android:drawableStart="@drawable/ic_photo_camera"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/take_photo"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/tvUploadPhoto"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/tvTakePhoto"
            android:background="@drawable/add_photo_frame"
            android:drawableStart="@drawable/ic_photo_album"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/album"
            android:textSize="@dimen/small_text_size" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape_round_15"
        android:backgroundTint="@color/colorPrimary"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:visibility="gone"
        android:text="@string/save_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

<include layout="@layout/layout_loader"/>
    <include layout="@layout/layout_no_internet"/>

</androidx.constraintlayout.widget.ConstraintLayout>